# start-setting-for-project

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.template  README.md  Taskfile.yml  my_install.sh  pyproject.toml  start2.py
