[tool.poetry]
name = "start-project-example"
version = "0.1.0"
description = ""
authors = ["avzimin <anton.zimin@axtechnology.uz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.5"
mypy = "^1.7.0"
pytest = "^7.4.3"
pylint = "^3.0.2"
bandit = "^1.7.5"
pre-commit = "^3.5.0"
safety = "^2.3.5"
isort = "^5.12.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
exclude = ["__init__.py", "alembic", "src/upivka.py", "src/fight/example/*"]

[tool.bandit]
exclude_dirs = ["venv", "tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["venv/", "alembic/"]


[tool.black]
line-length = 120

[tool.isort]
line_length = 119
profile = "black"
multi_line_output = 6
lines_after_imports = 2
force_single_line = true

[tool.autoflake]
check = true
imports = ["django", "requests", "urllib3"]
